@@ -29,6 +29,7 @@ public class NoteController {
     private final NotePermissionRepository notePermissionRepository;
     private final VaultPermissionRepository vaultPermissionRepository;
     private final NoteService noteService;
+    private final VaultService vaultService;
 
     public NoteController(JwtUtil jwtUtil,
                           VaultRepository vaultRepository,
@@ -48,6 +49,7 @@ public class NoteController {
         this.notePermissionRepository = notePermissionRepository;
         this.vaultPermissionRepository = vaultPermissionRepository;
         this.noteService = noteService;
+        this.vaultService = vaultService;
     }
 
     /* -------------------------------------------------
@@ -146,8 +148,19 @@ public class NoteController {
 
         // Makes no sense to create a PostDTO here to send back to the frontend
         NotesPostDTO dto = DTOMapper.INSTANCE.convertEntityToNotesPostDTO(note);
-        return ResponseEntity.status(HttpStatus.CREATED)
-                             .body(Map.of("message", "Note created", "note", dto));
+        
+        // Überprüfung auf null-Werte hinzugefügt
+        if (dto == null) {
+            return ResponseEntity.status(HttpStatus.CREATED)
+                               .body(Collections.singletonMap("message", "Note created"));
+        }
+        
+        // Verwendung von HashMap statt Map.of() für mehr Flexibilität
+        Map<String, Object> response = new HashMap<>();
+        response.put("message", "Note created");
+        response.put("note", dto);
+        
+        return ResponseEntity.status(HttpStatus.CREATED).body(response);
     }
 
     /* -------------------------------------------------
